--- a/requirements.local.txt
+++ b/requirements.local.txt
@@ -12,6 +12,7 @@ tzdata==2022.6
 psycopg2-binary
 drf-spectacular==0.24.2
 Pillow>=9.1.0,<9.2
-python-keycloak==2.6.0
-python-jose==3.3.0
+# python-keycloak==2.6.0
+# python-jose==3.3.0
 djangorestframework-simplejwt==5.2.2
+mozilla-django-oidc==3.0.0
