--- a/env.template
+++ b/env.template
@@ -1,6 +1,12 @@
 export DEBUG=1
 export SECRET_KEY='application secret'
 export DJANGO_ALLOWED_HOSTS=* localhost 127.0.0.1 [::1]
-export POSTGRES_DB=warehouse
-export POSTGRES_USER=dbUser
-export POSTGRES_PASSWORD=userPassword
+export DB_HOST=localhost
+export DB_NAME=warehouse
+export DB_USER=dbUser
+export DB_PASS=userPassword
+export OIDC_RP_CLIENT_SECRET=---set your secret key---
+export OIDC_RP_CLIENT_PUBLIC_KEY=---set your public key---
+export OIDC_RP_CLIENT_ID=warehouse
+export OIDC_KEYCLOAK_REALM=master
+export KEYCLOAK_SERVER_URL=http://127.0.0.1:18080/auth/
