--- a/requirements.local.txt
+++ b/requirements.local.txt
@@ -10,8 +10,9 @@ pytz==2022.6
 sqlparse==0.4.3
 tzdata==2022.6
 psycopg2-binary
-drf-spectacular==0.24.2
+drf-spectacular==0.25.1
 Pillow>=9.1.0,<9.2
 python-keycloak==2.6.0
 python-jose==3.3.0
 djangorestframework-simplejwt==5.2.2
+markdown==3.4.1
