--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,10 @@ pytz==2022.6
 sqlparse==0.4.3
 tzdata==2022.6
 psycopg2>=2.9.3,<2.10
-drf-spectacular==0.24.2
+drf-spectacular==0.25.1
 Pillow>=9.1.0,<9.2
 uwsgi>=2.0.20,<2.1
 python-keycloak==2.6.0
 python-jose==3.3.0
 djangorestframework-simplejwt==5.2.2
+markdown==3.4.1
